[package]
name = "mweb"
version = "0.1.0"
authors = ["CrLF0710"]
license = "MIT OR Apache2"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.2"
bitflags = "1.2.1"
once_cell = "1.2.0"
memchr = "2.2.1"
itertools = "0.8.1"
